--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc:
+  flutter_bloc:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
+  
 
 dev_dependencies:
   flutter_test:
